--- a/pipeline/assets/functions/parse/assets/deploy.yml
+++ b/pipeline/assets/functions/parse/assets/deploy.yml
@@ -7,4 +7,5 @@ phases:
       - OUTPUT_PROFILE=depsdeploy
       - ./session.sh $role_arn $OUTPUT_PROFILE
       - ls -la
-      - ./deploy.sh $OUTPUT_PROFILE $template_file_name $stack_name
+      - echo $tags
+      - ./deploy.sh $OUTPUT_PROFILE $template_file_name $stack_name $tags
