--- a/.github/workflows/synth-templates.yml
+++ b/.github/workflows/synth-templates.yml
@@ -11,7 +11,7 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'synth'
-          cdk_args: '--output cdk.out --build'
+          cdk_args: --build --output cdk.out
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
