--- a/pipeline/assets/cdk-macro/DockerFile
+++ b/pipeline/assets/cdk-macro/DockerFile
@@ -1,21 +1,18 @@
-FROM public.ecr.aws/lambda/python:3.9
+FROM public.ecr.aws/lambda/python:3.12
 
 # ARG ARG_CDK_APP_S3_BUCKET
 # ARG ARG_CDK_APP_S3_PREFIX
 
-# Install the function's dependencies using file requirements.txt
-# from your project folder.
-RUN yum update -y
-RUN yum install -y curl
-RUN curl -sL https://rpm.nodesource.com/setup_16.x | bash -
-
-
-RUN yum install -y nodejs
-
+RUN set -ex \
+    && dnf install -y nodejs \
+    && npm --version \
+    && npm update -g
 RUN npm install -g aws-cdk
 
-COPY requirements.txt  .
-RUN  pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
+# Install the function's dependencies using file requirements.txt
+# from your project folder.
+COPY requirements.txt ${LAMBDA_TASK_ROOT}
+RUN  pip3 install -r requirements.txt
 
 # Copy function code
 COPY src/index.py ${LAMBDA_TASK_ROOT}
